Editing operations for tags and comments

--- a/app/assets/stylesheets/edit_form.scss
+++ b/app/assets/stylesheets/edit_form.scss
@@ -4,3 +4,9 @@ ul.listing {
   list-style-type: none;
   padding-left:0;
 }
+
+button.category {
+  border-radius: 0;
+  border-left: none;
+  border-right: none;
+}
