Separate Tag and Comment interfaces
Tags and Comments are no longer similar enough that they can share common controller, forms, views and inputs. This
changes existing references from 'annotation' to 'comment' and disables the existing Aictag class temporarily. Once
the new interface for Aictag and TagCats is complete, it will be re-enabled.

--- a/app/views/comments/_modal.html.erb
+++ b/app/views/comments/_modal.html.erb
@@ -1,7 +1,7 @@
 <div class="modal-content">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h4 class="modal-title" id="annotation_edit">Add categories</h4>
+    <h4 class="modal-title" id="comment_edit">Add categories</h4>
   </div>
   <div class="modal-body">
     <div id="descriptions_display" class="tab-pane active">
