--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,4 +1,4 @@
 <div id="comment_edit">
   <h4>Edit Comment</h4>
-  <%= render partial: "annotations/descriptions", form: @form %>
+  <%= render partial: "comments/descriptions", form: @form %>
 </div>
