--- a/app/views/_user_util_links.html.erb
+++ b/app/views/_user_util_links.html.erb
@@ -12,6 +12,7 @@
         <% if can? :create, GenericFile %>
           <li><%= link_to raw('<span class="glyphicon glyphicon-upload"></span> upload'), sufia.new_generic_file_path, id: 'upload_nav_link' %></li>
           <li><%= link_to raw('<span class="glyphicon glyphicon-tags"></span> add tag category'), new_tag_cat_path, id: 'new_tag_cat_link' %></li>
+          <li><%= link_to raw('<span class="glyphicon glyphicon-tags"></span> add tag'), new_tag_path, id: 'new_tag_link' %></li>
         <% end %>
         <li><%= link_to raw('<span class="glyphicon glyphicon-user"></span> my profile'), sufia.profile_path(current_user), id: 'profile_nav_link' %></li>
         <%= render partial: 'users/user_util_links_extra' %>
