Adding breadcrumbs for works

--- a/app/views/works/edit.html.erb
+++ b/app/views/works/edit.html.erb
@@ -1,3 +1,4 @@
+<%= render_breadcrumbs builder: Sufia::BootstrapBreadcrumbsBuilder %>
 <div id="work_new">
   <h4>Edit Work</h4>
   <%= render "descriptions" %>
