changes to masthead
adding logo

--- a/app/views/_logo.html.erb
+++ b/app/views/_logo.html.erb
@@ -1,1 +1,1 @@
-<a id="logo" href="/"><img src="/assets/LAKE_logo-64.png" /></a><a href="/" class="institution_name"><%=t('sufia.product_name') %></a>
+<a id="logo" href="/"><img src="/assets/LAKE_logo-64.png" /></a><a href="/" class="institution_name">AIC Digital Asset <br />Management System</a>
