removing feature tab, editing recent tab

--- a/app/assets/stylesheets/aicstyles.scss
+++ b/app/assets/stylesheets/aicstyles.scss
@@ -108,3 +108,9 @@ $yellow: #F0CA00;
 .btn-lg {
   font-size: 32px;
   }
+  
+#recentTab {
+  font-size: 25px;
+  border: none;
+  color: #000000;
+  }
