--- a/app/views/homepage/_home_content.html.erb
+++ b/app/views/homepage/_home_content.html.erb
@@ -13,16 +13,8 @@
 </div><!-- /.col-xs-6 -->
 <div class="col-xs-12 col-sm-6">
   <div>
-    <%= render partial: 'featured_researcher' %>
-  </div>
-  <div>
-    <%- if blacklight_config.respond_to?(:tag_cloud_field_name) && blacklight_config.tag_cloud_field_name %>
-        <div class="row">
-          <h2 class="heading1 pull-left"><%= t('sufia.homepage.explore') %></h2>
-          <span class="sr-only"><%= t('sufia.homepage.sr_explore') %></span>
-          <%= render partial: 'tagcloud', locals: { tag_cloud_field_name: blacklight_config.tag_cloud_field_name } %>
-        </div>
-    <%- end %>
+    <h2>Advanced Search</h2>
+	<div id="emptybox"></div>
   </div>
 </div><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
