--- a/app/assets/stylesheets/aicstyles.scss
+++ b/app/assets/stylesheets/aicstyles.scss
@@ -20,7 +20,6 @@ body {
   
 .row {
   margin-left: 15px;
-  margin-right: 15px;
   }
 
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, #search-navbar .search-query-form, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
@@ -129,7 +128,7 @@ body {
   }
 	
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-  background-color: $grey;
+  background-color: transparent;
   }
 
 #home_content {
@@ -137,6 +136,8 @@ body {
     font-family: Verdana, Arial, sans-serif;
     font-size: 25px;
     font-weight: normal;
+	margin-top: 14px;
+    margin-bottom: 13px;
     }
   }
   
@@ -144,4 +145,9 @@ div.heading-tile .glyphicon, div.heading-tile .help-icon, div.heading-tile .glyp
   background: $aicred;
   color: $yellow;
   border: none;
+  }
+
+#emptybox {
+  background-color: #fff;
+  height: 400px;
   }
