remove greetings from dashboard

--- a/app/assets/stylesheets/aicstyles.scss
+++ b/app/assets/stylesheets/aicstyles.scss
@@ -156,3 +156,7 @@ div.heading-tile .glyphicon, div.heading-tile .help-icon, div.heading-tile .glyp
   background-color: #fff;
   height: 400px;
   }
+  
+.heading-row {
+  padding-top: 20px;
+  }
