--- a/app/assets/stylesheets/aicstyles.scss
+++ b/app/assets/stylesheets/aicstyles.scss
@@ -72,7 +72,7 @@ body {
 #home_header {
   border-top: 0;
   border-bottom: 0;
-  background-image: url(/assets/lakeshore.jpg);
+  background-image: image-url("lakeshore.jpg");
   background-position: 0% 51%;
   }
   
