--- a/app/views/_logo.html.erb
+++ b/app/views/_logo.html.erb
@@ -1,1 +1,2 @@
-<a id="logo" href="/"><img src="/assets/LAKE_logo-64.png" /></a><a href="/" class="institution_name">AIC Digital Asset <br />Management System</a>
+<%= link_to image_tag("LAKE_logo-64.png"), root_path, id: "logo" %>
+<%= link_to raw("AIC Digital Asset <br />Management System"), root_path, class: "institution_name" %>
