--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="col-xs-12 col-sm-8">
     <h1 class="visibility"><%= display_multiple @presenter.title %> <%= render_work_visibility_badge %></h1>
-    <p class="work_description"><%= display_multiple @presenter.description %></p>
+    <%= render 'list_assets' unless @work.assets.empty? %>
     <%= render 'generic_files/show_descriptions' %>
   </div><!-- /columns second -->
 </div> <!-- /.row -->
