Add advanced search to homepage, fixes #73

--- a/app/views/homepage/_home_content.html.erb
+++ b/app/views/homepage/_home_content.html.erb
@@ -12,17 +12,6 @@
   </div>
 </div><!-- /.col-xs-6 -->
 <div class="col-xs-12 col-sm-6">
-  <div>
-    <h2>Advanced Search</h2>
-	<div id="emptybox"></div>
-  </div>
-</div><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
-</head>
-
-<body>
-</body>
-</html>
+  <h2>Advanced Search</h2>
+  <%= render 'advanced/advanced_search_form' %>
+</div>
