--- a/app/assets/stylesheets/blacklight_advanced_search.scss
+++ b/app/assets/stylesheets/blacklight_advanced_search.scss
@@ -1,7 +1,7 @@
 /* Overrides to the styles in the blacklight_advanced_search plugin */
 
 #advanced_search {
-  input {
+  input, select {
     margin-bottom: 5px;
   }
 }
