Presenter for assets within works, ref #79
Removes resource_type from edit and display and uses asset type for
display of assets within a work.

--- a/app/views/works/_list_assets.html.erb
+++ b/app/views/works/_list_assets.html.erb
@@ -1,4 +1,4 @@
-<h2>Assets</h2>
+<h2>Relationships</h2>
 <% @work.assets.each do |asset| %>
-  <%= link_to_asset(asset) %>
+  <%= render partial: 'generic_files/asset_display', locals: { asset: asset } %>
 <% end %>
