--- a/app/assets/stylesheets/aicstyles.scss
+++ b/app/assets/stylesheets/aicstyles.scss
@@ -146,6 +146,12 @@ body {
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
   background-color: transparent;
   }
+  
+#my_nav.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+  background-color: #fff;
+  padding-right: 5px;
+  padding-left: 5px;
+  }
 
 #home_content {
   h2 {
