Hide file selection form until asset type is selected, fixes #97

--- a/app/views/generic_files/upload/_form.html.erb
+++ b/app/views/generic_files/upload/_form.html.erb
@@ -6,8 +6,8 @@
     </div>
   <% end %>
   <%= label_tag :asset_type, "Asset Type" %>
-  <%= select_tag :asset_type, options_for_select({ "Still Image" => "still_image", "Text" => "text" }, "still_image") %>
-  <div class="well">
+  <%= select_tag :asset_type, options_for_select({ "Still Image" => "still_image", "Text" => "text" }), prompt: "Select..." %>
+  <div class="well" id="fileupload_selection">
     <%= render partial: 'generic_files/upload/form_fields' %>
   </div>
 <% end %>
