--- a/app/views/citi_resources/show.html.erb
+++ b/app/views/citi_resources/show.html.erb
@@ -3,11 +3,11 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
     <%= image_tag "default.png", alt: "No preview available", class: "img-responsive" %>
-    <%= render 'show_actions' %>
+    <%= render 'citi_resources/show_actions' %>
   </div>
   <div class="col-xs-12 col-sm-8">
-    <h1 class="visibility"><%= @presenter.pref_label %> <%= render_work_visibility_badge %></h1>
-    <%= render 'list_assets' unless @work.assets.empty? %>
+    <h1 class="visibility"><%= @presenter.pref_label %> <%= render_resource_visibility_badge %></h1>
+    <%= render 'citi_resources/list_assets' unless @presenter.related_assets.empty? %>
     <%= render 'generic_files/show_descriptions' %>
   </div><!-- /columns second -->
 </div> <!-- /.row -->
