--- a/app/views/records/show_fields/_status.html.erb
+++ b/app/views/records/show_fields/_status.html.erb
@@ -1,3 +1,3 @@
 <% unless record.status.empty? %>
-  <%= link_to(record.status.first.id) %>
+  <%= link_to(record.status.first.id, url_for(record.status.first.id)) %>
 <% end %>
