Removing/replacing reference to 'Tag'

--- a/app/views/records/show_fields/_comments.html.erb
+++ b/app/views/records/show_fields/_comments.html.erb
@@ -1,4 +1,4 @@
 <% record.comments.each do |comment| %>
-  <%= comment.content %>, Tags: <%= comment.category.join(", ") %>
+  <%= comment.content %>, Categories: <%= comment.category.join(", ") %>
   <br/>
 <% end %>
