--- a/app/views/batch/_metadata.html.erb
+++ b/app/views/batch/_metadata.html.erb
@@ -8,7 +8,7 @@
         <div class="form-group">
           <%= f.input_label :title, as: :multi_value_with_help, label: "Title #{index + 1}" %>
           <div id="additional_title_clone">
-            <%= f.text_field :title, name: "title[#{gen_f.id}][]", value: gen_f.uid, class: 'form-control', required: true %>
+            <%= f.text_field :title, name: "title[#{gen_f.id}][]", value: gen_f.label, class: 'form-control', required: true %>
           </div>
         </div>
       <% end %>
@@ -27,9 +27,6 @@
     <div class="row">
       <div class="col-sm-6">
       <h3>Applies to all files just uploaded</h3>
-      <%= f.input :resource_type, as: :select_with_help, collection: Sufia.config.resource_types,
-          input_html: { class: 'form-control', multiple: true } %>
-
       <%= f.input :creator, as: :multi_value_with_help %>
 
       <%= f.input :rights, as: :select_with_modal_help, collection: Sufia.config.cc_licenses,
