--- a/app/views/generic_files/_permission_form.html.erb
+++ b/app/views/generic_files/_permission_form.html.erb
@@ -2,6 +2,7 @@
 <% public_perm = f.object.permissions.map { |perm| perm.access if perm.agent_name == "public"}.compact.first %>
 <% public_perm = true if params[:controller] == 'batch' %>
 <% registered_perm = f.object.permissions.map { |perm| perm.access if perm.agent_name == "registered"}.compact.first %>
+<% available_roles = Role.pluck(:name) %>
 
 <h2><% if params[:controller] == 'batch' %>Bulk <% end %>Permissions <% if params[:controller] == 'batch' %>
       <small>(applied to all files just uploaded)</small><% end %>
@@ -63,7 +64,7 @@
       <p class="sr-only">Use the add button to give access to one group at a time (it will be added to the list below).</p>
       <div class="col-sm-5">
         <label for="new_group_name_skel" class="sr-only">Group</label>
-        <%= select_tag 'new_group_name_skel', options_for_select(["Select a group"] + current_user.groups), class: 'form-control' %>
+        <%= select_tag 'new_group_name_skel', options_for_select(["Select a group"] + available_roles), class: 'form-control' %>
       </div>
       <div class="col-sm-4">
         <label for="new_group_permission_skel" class="sr-only">Access type to grant</label>
@@ -105,18 +106,18 @@
     </tr>
   <% end %>
   <%= f.fields_for :permissions do |permission_fields| %>
-    <%# skip the public, penn state (aka registered), and depositor perms as they are displayed first at the top %>
-    <% next if ['public', 'registered', 'department', f.object.dept_created, depositor].compact.include? permission_fields.object.agent_name.downcase %>
-    <tr>
-      <td><%= permission_fields.label :agent_name, class: "control-label" do %>
-        <%= user_display_name_and_key(permission_fields.object.agent_name) %>
-      <% end %></td>
-      <td>
-        <div class="col-sm-8">
-          <%= permission_fields.select :access, Sufia.config.permission_levels, {}, class: 'form-control select_perm' %>
-        </div>
-        <button class="btn close remove_perm" data-index="<%= permission_fields.index %>">X</button>
-      </td>
-    </tr>
+    <% if available_roles.include?(permission_fields.object.agent_name.downcase) %>
+      <tr>
+        <td><%= permission_fields.label :agent_name, class: "control-label" do %>
+          <%= user_display_name_and_key(permission_fields.object.agent_name) %>
+        <% end %></td>
+        <td>
+          <div class="col-sm-8">
+            <%= permission_fields.select :access, Sufia.config.permission_levels, {}, class: 'form-control select_perm' %>
+          </div>
+          <button class="btn close remove_perm" data-index="<%= permission_fields.index %>">X</button>
+        </td>
+      </tr>
+    <% end %>
   <% end %>
 </table>
