Choose selected status in edit form, fixes #132

--- a/app/views/records/edit_fields/_status_id.html.erb
+++ b/app/views/records/edit_fields/_status_id.html.erb
@@ -1,2 +1,2 @@
-<%= f.input :status_id, as: :select_with_help, collection: StatusType.options,
+<%= f.input :status_id, as: :select_with_help, collection: StatusType.options, selected: @form.status_id,
     input_html: { class: 'form-control', multiple: false } %>
