Improve relationship list in non-asset view #155

--- a/app/views/citi_resources/_list_assets.html.erb
+++ b/app/views/citi_resources/_list_assets.html.erb
@@ -18,7 +18,7 @@
 <% end %>
 
 <% unless @presenter.preferred_representations.empty? %>
-  <h3>Preferred Representations</h3>
+  <h3>Preferred Representation</h3>
   <% @presenter.preferred_representations.each do |asset| %>
     <%= render partial: 'generic_files/asset_display', locals: { asset: asset } %>
   <% end %>
