Improve incoming relationship list in asset view #154

--- a/app/assets/stylesheets/aicstyles.scss
+++ b/app/assets/stylesheets/aicstyles.scss
@@ -196,3 +196,7 @@ div.heading-tile .glyphicon, div.heading-tile .help-icon, div.heading-tile .glyp
 form.per_page.form-inline {
   display:inline-block;
   }
+  
+dd.assetview {
+    margin-bottom: 0px;
+  }
