--- a/app/views/batch/_metadata.html.erb
+++ b/app/views/batch/_metadata.html.erb
@@ -35,6 +35,10 @@
       <%= f.input :document_type_ids, as: :select_with_help, label: "Document Types", collection: DocumentType.options,
           required: true, input_html: { class: 'form-control', multiple: true } %>
 
+      <%= f.input :representation_for, input_html: { value: params[:representation_for] } %>
+
+      <%= f.input :document_for, input_html: { value: params[:document_for] } %>
+
       <%= render "generic_files/rights_modal" %>
 
       <button id="show_addl_descriptions" class="btn btn-default" aria-label="reveal additional metadata description fields">Show Additional Fields</button>
