--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag search_form_action, method: :get, id: "search-form-header", role: "search" do %>
-  <%= render_hash_as_hidden_fields(params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
+  <%= render_hash_as_hidden_fields(params_for_search.except(:q, :search_field, :qt, :page, :utf8, :f)) %>
 
     <div class="row">
       <div class="col-xs-12">
