Quick search for assets redirects to catalog, fixes #199

--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -24,7 +24,7 @@
               </li>
 			  <li>
                 <%= link_to "All Assets", "#",
-                    data: { "search-option" => works_path, "search-label" => "Assets" } %>
+                    data: { "search-option" => generic_files_path, "search-label" => "Assets" } %>
               </li>
               <li>
                 <%= link_to "Works", "#",
