--- a/app/views/generic_files/_show_descriptions.html.erb
+++ b/app/views/generic_files/_show_descriptions.html.erb
@@ -1,6 +1,6 @@
 <h2>Descriptions</h2>
 <dl class="dl-horizontal file-show-term file-show-descriptions">
-  <% present_terms(@presenter,@presenter.terms - [:title]) do |r, term| %>
+  <% present_terms(@presenter) do |r, term| %>
   <dt><%= r.label(term) %></dt>
       <dd><%= r.value(term) %></dd>
   <% end %>
