--- a/app/views/records/edit_fields/_digitization_source_id.html.erb
+++ b/app/views/records/edit_fields/_digitization_source_id.html.erb
@@ -1,2 +1,3 @@
-<%= f.input :digitization_source_id, as: :select_with_help, collection: DigitizationSource.options, include_blank: true,
-    selected: @form.digitization_source_id, input_html: { class: 'form-control', multiple: false } %>
+<%= f.input :digitization_source_id, as: :select_with_help, label: t('simple_form.labels.generic_file.digitization_source'),
+	collection: DigitizationSource.options, include_blank: true, selected: @form.digitization_source_id,
+	input_html: { class: 'form-control', multiple: false } %>
