--- a/app/views/records/edit_fields/_document_type_ids.html.erb
+++ b/app/views/records/edit_fields/_document_type_ids.html.erb
@@ -1,2 +1,3 @@
-<%= f.input :document_type_ids, as: :select_with_help, label: "Document Types", collection: DocumentType.options,
-    selected: @form.document_type_ids, input_html: { class: 'form-control', multiple: true } %>
+<%= f.input :document_type_ids, as: :select_with_help, label: t('simple_form.labels.generic_file.document_type'),
+	collection: DocumentType.options, selected: @form.document_type_ids,
+	input_html: { class: 'form-control', multiple: true } %>
