--- a/app/views/generic_files/_permission_form.html.erb
+++ b/app/views/generic_files/_permission_form.html.erb
@@ -106,18 +106,17 @@
     </tr>
   <% end %>
   <%= f.fields_for :permissions do |permission_fields| %>
-    <% if available_roles.include?(permission_fields.object.agent_name.downcase) %>
-      <tr>
-        <td><%= permission_fields.label :agent_name, class: "control-label" do %>
-          <%= user_display_name_and_key(permission_fields.object.agent_name) %>
-        <% end %></td>
-        <td>
-          <div class="col-sm-8">
-            <%= permission_fields.select :access, Sufia.config.permission_levels, {}, class: 'form-control select_perm' %>
-          </div>
-          <button class="btn close remove_perm" data-index="<%= permission_fields.index %>">X</button>
-        </td>
-      </tr>
-    <% end %>
+    <% next if ['admin', 'registered', depositor].include? permission_fields.object.agent_name.downcase %>
+    <tr>
+      <td><%= permission_fields.label :agent_name, class: "control-label" do %>
+        <%= user_display_name_and_key(permission_fields.object.agent_name) %>
+      <% end %></td>
+      <td>
+        <div class="col-sm-8">
+          <%= permission_fields.select :access, Sufia.config.permission_levels, {}, class: 'form-control select_perm' %>
+        </div>
+        <button class="btn close remove_perm" data-index="<%= permission_fields.index %>">X</button>
+      </td>
+    </tr>
   <% end %>
 </table>
