--- a/app/views/batch/_more_metadata.html.erb
+++ b/app/views/batch/_more_metadata.html.erb
@@ -1,6 +1,8 @@
 <div id="more_descriptions">
   <button id="hide_addl_descriptions" class="btn btn-default" aria-label="hide additional metadata description fields">Hide Additional Fields</button>
-  <% (f.object.terms - [:title, :creator, :rights]).each do |term| %>
+  <% (f.object.terms - [:document_type_ids, :title, :created_by]).each do |term| %>
     <%= render_edit_field_partial(term, f: f) %>
   <% end %>
+  <%= f.input :representation_for, input_html: { value: params[:representation_for] } %>
+  <%= f.input :document_for, input_html: { value: params[:document_for] } %>
 </div> <!-- /more_descriptions -->
