--- a/app/views/batch/_metadata.html.erb
+++ b/app/views/batch/_metadata.html.erb
@@ -27,10 +27,8 @@
     <div class="row">
       <div class="col-sm-6">
       <h3>Applies to all files just uploaded</h3>
-
-      <%= f.input :document_type_ids, as: :select_with_help, label: "Document Types", collection: DocumentType.options,
-          required: true, input_html: { class: 'form-control', multiple: true } %>
       
+      <%= render_edit_field_partial(:document_type_ids, f: f) %>
       <%= render_edit_field_partial(:created_by, f: f) %>
 
       <button id="show_addl_descriptions" class="btn btn-default" aria-label="reveal additional metadata description fields">
