--- a/app/assets/stylesheets/aicstyles.scss
+++ b/app/assets/stylesheets/aicstyles.scss
@@ -89,6 +89,9 @@ body {
   
 #search-submit-header {
   background-color: #000000;
+  border: 1px solid transparent;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
   }
   
 #home_header {
@@ -200,3 +203,7 @@ form.per_page.form-inline {
 dd.assetview {
     margin-bottom: 0px;
   }
+  
+button.dropdown-toggle {
+	border-radius: 0;
+}
