#152 Some text document thumbnail oversized in asset view page

--- a/app/assets/stylesheets/aicstyles.scss
+++ b/app/assets/stylesheets/aicstyles.scss
@@ -201,9 +201,13 @@ form.per_page.form-inline {
   }
   
 dd.assetview {
-    margin-bottom: 0px;
+  margin-bottom: 0px;
   }
   
 button.dropdown-toggle {
-	border-radius: 0;
+  border-radius: 0;
+}
+
+figure {
+  max-width: 100%;
 }
