--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -22,5 +22,15 @@
   </div><!-- /.container -->
 </div><!-- /#wrapper -->
 <%= render 'shared/ajax_modal' %>
+<table class="table table-condensed">
+<% request.env.each do |k, v| %>
+  <% if k =~ /^HTTP/ %>
+    <tr>
+      <td><strong><%= k %></strong></td>
+      <td><%= v %></td>
+    </tr>
+  <% end %>
+<% end %>
+</table>
 </body>
 </html>
