--- a/app/views/generic_files/_permission_form.html.erb
+++ b/app/views/generic_files/_permission_form.html.erb
@@ -2,7 +2,6 @@
 <% public_perm = f.object.permissions.map { |perm| perm.access if perm.agent_name == "public"}.compact.first %>
 <% public_perm = true if params[:controller] == 'batch' %>
 <% registered_perm = f.object.permissions.map { |perm| perm.access if perm.agent_name == "registered"}.compact.first %>
-<% available_roles = Role.pluck(:name) %>
 <% dept_created = f.object.dept_created %>
 
 <h2><% if params[:controller] == 'batch' %>Bulk <% end %>Permissions <% if params[:controller] == 'batch' %>
@@ -65,7 +64,8 @@
       <p class="sr-only">Use the add button to give access to one group at a time (it will be added to the list below).</p>
       <div class="col-sm-5">
         <label for="new_group_name_skel" class="sr-only">Group</label>
-        <%= select_tag 'new_group_name_skel', options_for_select(["Select a group"] + available_roles), class: 'form-control' %>
+        <%= select_tag 'new_group_name_skel', options_for_select(Department.options), 
+            include_blank: true, class: 'form-control' %>
       </div>
       <div class="col-sm-4">
         <label for="new_group_permission_skel" class="sr-only">Access type to grant</label>
@@ -81,12 +81,12 @@
 
 </div><!-- /.well -->
 
-<table class="table table-bordered">
+<table id="file_permissions" class="table table-bordered"><tbody>
   <tr>
     <th width="60%">Person/Group</th>
     <th width="40%">Access Level</th>
   </tr>
-  <tr id="file_permissions">
+  <tr>
     <td>
       <%= label_tag :owner_access, class: "control-label" do %>
         Depositor (<span id="file_owner" data-depositor="<%= depositor %>"><%= link_to_profile depositor %></span>)
@@ -120,4 +120,4 @@
       </td>
     </tr>
   <% end %>
-</table>
+</tbody></table>
