--- a/app/views/_user_util_links.html.erb
+++ b/app/views/_user_util_links.html.erb
@@ -22,6 +22,10 @@
       <%= render partial: 'users/user_util_links_extra' %>
       <li class="divider"></li>
       <%= render partial: '/admin_links' if current_user.admin? %>
+      <li>
+        <%= link_to raw('<span class="glyphicon glyphicon-log-out"></span> logout'), '/Shibboleth.sso/Logout', 
+            id: 'logout_link' %>
+      </li>
     </ul>
   </div><!-- /.btn-group -->
 <% end %>
