Changing header nav and search around, adding sufia styles to application file

--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -1,2 +1,81 @@
 /* Scss Document */
 
+@font-face {
+  font-family: 'idealsans';
+  src: url('IdealSans-Thin.otf') format('truetype');
+}
+
+$aicred: #9d1c33;
+$white: #ffffff;
+$linkcolor: #337ab7;
+
+a, a:link, a:visited, a:hover, a:active {
+	color: $linkcolor;
+	text-decoration: none;
+}
+
+#search-form-header, .navbar-header {
+    margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+.institution_name {
+  	font-family: 'idealsans';
+   	font-size: 1.5em;
+    display: inline-block;
+    left: 115px;
+    top: 25px;
+    position: absolute;
+    line-height: 30px;
+    color: $white;
+    letter-spacing: 1px;
+    font-weight: 100;
+	text-decoration: none;
+}
+
+a.institution_name, a:link.institution_name, a:visited.institution_name, a:hover.institution_name, a:active.institution_name {
+	color: $white;
+	text-decoration: none;
+}
+
+.advance-search {
+    top: 30px;
+    position: absolute;
+}
+
+.btn-primary {
+    background-color: #9d1c33;
+    border-color: #9d1c33;
+}
+
+.dropdown-toggle {
+	border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.input-group-btn:last-child > .btn:not(:last-child):not(.dropdown-toggle) {
+	border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.navbar-default {
+    background-color: #222;
+    border-color: #222;
+}
+
+.navbar-nav > li > a {
+	padding-top: 0px;
+}
+
+.navbar-text { 
+	margin-bottom: 0px;
+}
+
+#footer .navbar {
+	margin-bottom: 0px;
+	min-height: 25px;
+}
+
+ul.nav {
+	padding-right: 0px;
+}
