--- a/app/views/_user_util_links.html.erb
+++ b/app/views/_user_util_links.html.erb
@@ -1,4 +1,4 @@
-<ul id="user_utility_links" class="nav navbar-nav navbar-right">
+<ul id="user_utility_links" class="nav navbar-nav">
   <% if user_signed_in? %>
     <li>
       <%= link_to sufia.notifications_path do %>
