--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -12,9 +12,22 @@
     </div>
 
     <div class="collapse navbar-collapse" id="top-navbar-collapse">
-      <%= render partial: '/toolbar' %>
-
-      <%= render partial: '/user_util_links' %>
+	  <div class="navbar-right row col-md-9 col-lg-8">
+	    <div class="col-sm-8 col-md-9 col-lg-8">
+          <%= render partial: 'catalog/search_form' %>
+        </div>
+	    <div class="col-sm-4 col-md-3 col-lg-4">
+          <a href="#" class="advance-search">Advanced Search</a>
+        </div>
+	  </div>
+	  <div class="navbar-right row col-sm-12 col-md-9 col-lg-8">
+		  <div class="col-sm-6 col-md-7 col-lg-8">
+		    <%= render partial: '/toolbar' %>
+		  </div>
+		  <div class="col-sm-6 col-md-5 col-lg-4">
+      	    <%= render partial: '/user_util_links' %>
+		  </div>
+	  </div>
     </div>
   </div>
 </nav>
