Display selected uris for asset and document type

--- a/app/views/records/edit_fields/_asset_type.html.erb
+++ b/app/views/records/edit_fields/_asset_type.html.erb
@@ -1,2 +1,4 @@
-<%= f.input :asset_type, as: :select, collection: [['Still Image','still_image'], ['Text', 'text']],
-    input_html: { class: 'form-control', multiple: false }, required: f.object.required?(key) %>
+<% if action_name == 'new' %>
+  <%= f.input :asset_type, as: :select, collection: [['Still Image','still_image'], ['Text', 'text']],
+      input_html: { class: 'form-control', multiple: false }, required: f.object.required?(key) %>
+<% end %>
