--- a/app/views/records/edit_fields/_document_type_uris.html.erb
+++ b/app/views/records/edit_fields/_document_type_uris.html.erb
@@ -1,2 +1,3 @@
 <%= f.input key, as: :multi_value_select, collection: DocumentType.options, include_blank: true,
+    selected: f.object.uris_for(:document_type),
     input_html: { class: 'form-control', multiple: true }, required: f.object.required?(key) %>
