Updating to Sufia 7.0.0.beta1

--- a/app/views/records/edit_fields/_compositing_uri.html.erb
+++ b/app/views/records/edit_fields/_compositing_uri.html.erb
@@ -1,3 +1,3 @@
-<%= f.input :compositing_uri, as: :select_with_help, label: t('simple_form.labels.generic_file.compositing'),
+<%= f.input :compositing_uri, as: :select, label: t('simple_form.labels.generic_file.compositing'),
 	collection: Compositing.options, include_blank: true, selected: @form.compositing_uri,
 	input_html: { class: 'form-control', multiple: false } %>
