--- a/app/views/records/edit_fields/_digitization_source_uri.html.erb
+++ b/app/views/records/edit_fields/_digitization_source_uri.html.erb
@@ -1,3 +1,3 @@
-<%= f.input :digitization_source_uri, as: :select_with_help, label: t('simple_form.labels.generic_file.digitization_source'),
+<%= f.input :digitization_source_uri, as: :select, label: t('simple_form.labels.generic_file.digitization_source'),
 	collection: DigitizationSource.options, include_blank: true, selected: @form.digitization_source_uri,
 	input_html: { class: 'form-control', multiple: false } %>
