--- a/app/views/records/edit_fields/_asset_type.html.erb
+++ b/app/views/records/edit_fields/_asset_type.html.erb
@@ -1,4 +1,8 @@
 <% if action_name == 'new' %>
-  <%= f.input :asset_type, as: :select, collection: [['Still Image','still_image'], ['Text', 'text']],
-      input_html: { class: 'form-control', multiple: false }, required: f.object.required?(key) %>
+  <%= f.input :asset_type,
+  			  as: :select,
+  			  collection: [['Still Image', AICType.StillImage], ['Text', AICType.Text]],
+              input_html: { class: 'form-control', multiple: false, id: 'asset_type_select' },
+              required: f.object.required?(key) %>
+  <%= f.input :asset_type, as: :hidden %>
 <% end %>
