Load aic styles last to override existing ones

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,11 @@
  * file per style scope.
  *
  *= require blacklight_range_limit
- *= require_tree .
+ *= require batch_edit
+ *= require blacklight
+ *= require blacklight_gallery
+ *= require openseadragon
+ *= require sufia
+ *= require aic_styles
  *= require_self
 */
