--- a/app/views/records/edit_fields/_compositing_uri.html.erb
+++ b/app/views/records/edit_fields/_compositing_uri.html.erb
@@ -1,3 +1,3 @@
 <%= f.input :compositing_uri, as: :select, label: t('simple_form.labels.generic_file.compositing'),
-	collection: Compositing.options, include_blank: true, selected: @form.compositing_uri,
+	collection: Compositing.options, include_blank: true, selected: @form.uri_for(:compositing),
 	input_html: { class: 'form-control', multiple: false } %>
