--- a/app/views/records/edit_fields/_light_type_uri.html.erb
+++ b/app/views/records/edit_fields/_light_type_uri.html.erb
@@ -1,3 +1,3 @@
 <%= f.input :light_type_uri, as: :select, label: t('simple_form.labels.generic_file.light_type'), 
-	collection: LightType.options, include_blank: true, selected: @form.light_type_uri,
+	collection: LightType.options, include_blank: true, selected: @form.uri_for(:light_type),
 	input_html: { class: 'form-control', multiple: false } %>
