--- a/app/views/records/edit_fields/_view_uris.html.erb
+++ b/app/views/records/edit_fields/_view_uris.html.erb
@@ -1,3 +1,3 @@
 <%= f.input :view_uris, as: :select, label: t('simple_form.labels.generic_file.view'),
-    collection: View.options, selected: @form.view_uris,
+    collection: View.options, selected: @form.uris_for(:view),
     input_html: { class: 'form-control', multiple: true } %>
