edits to search button colors

--- a/app/assets/stylesheets/aic_styles.scss
+++ b/app/assets/stylesheets/aic_styles.scss
@@ -7,13 +7,19 @@
 
 $aicred: #9d1c33;
 $white: #ffffff;
-$linkcolor: #337ab7;
+$linkcolor: #9d9d9d;
 
-a, a:link, a:visited, a:hover, a:active {
+.advance-search {
+    top: 30px;
+    position: absolute;
 	color: $linkcolor;
 	text-decoration: none;
+	&:hover {
+    	color: $white;
+		text-decoration: none;
+  	}
 }
-
+	
 #search-form-header, .navbar-header {
     margin-top: 15px;
 	margin-bottom: 15px;
@@ -38,14 +44,15 @@ a.institution_name, a:link.institution_name, a:visited.institution_name, a:hover
 	text-decoration: none;
 }
 
-.advance-search {
-    top: 30px;
-    position: absolute;
+#search-submit-header {
+    background-color: $aicred;
+    border-color: $aicred;
 }
 
-.btn-primary {
-    background-color: #9d1c33;
-    border-color: #9d1c33;
+#search-submit-header:hover {
+    color: #333;
+    background-color: #e6e6e6;
+    border-color: #adadad;
 }
 
 .dropdown-toggle {
