--- a/app/views/sufia/homepage/_home_header.html.erb
+++ b/app/views/sufia/homepage/_home_header.html.erb
@@ -1,9 +1,9 @@
 <div class="home_call_action col-xs-12 col-sm-12">
-  <% if can? :view_share_work, GenericWork %>
+  <% if @presenter.display_share_button? %>
     <div class="home_share_work">
-      <%= link_to sufia.new_curation_concerns_generic_work_path, class: "btn btn-primary btn-lg btn-block", id: "contribute_link" do %>
-        <i class="glyphicon glyphicon-upload"></i> Upload Your Assets
+      <%= link_to [:new, Sufia.primary_work_type.model_name.singular_route_key], class: "btn btn-primary btn-lg btn-block", id: "contribute_link" do %>
+        <i class="glyphicon glyphicon-upload"></i> <%= t('sufia.share_button') %>
       <% end %>
     </div>
-  <% end %>
+  <% end %>  
 </div>
