Omiting Sufia control page; using shared footer

--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -21,6 +21,6 @@
       </div>
     </div><!-- /.row -->
   </div><!-- /#content-wrapper -->
-  <%= render '/footer' %>
+  <%= render 'shared/footer' %>
 </body>
 </html>
