--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,11 @@
-<footer id="footer" class="navbar navbar-inverse">
+<footer class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-text text-left">
-        <p>&#169; 2015 The Art Institute of Chicago - Released under the Apache License, version 2.0</p>
+      <p>&#169; 2015 The Art Institute of Chicago - Released under the Apache License, version 2.0</p>
     </div>
     <div class="navbar-right">
       <div class="navbar-text text-right">
-        <%= render partial: '/controls' %>
+        <%= render partial: 'lakeshore/controls' %>
       </div>
     </div>
   </div>
