Adding fedora uri to asset presenter terms

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -13,6 +13,7 @@
 <%= presenter.attribute_to_html(:end_date) %>
 <%= presenter.attribute_to_html(:exhibition_history) %>
 <%= presenter.attribute_to_html(:exhibition_type) %>
+<%= presenter.attribute_to_html(:fedora_uri) %>
 <%= presenter.attribute_to_html(:gallery_location) %>
 <%= presenter.attribute_to_html(:inscriptions) %>
 <%= presenter.attribute_to_html(:lat) %>
