Link resources to newly created assets, fixes #440

--- a/app/views/curation_concerns/base/_relationships.html.erb
+++ b/app/views/curation_concerns/base/_relationships.html.erb
@@ -1,4 +1,5 @@
 <h2>Relationships</h2>
+<%= render 'add_asset' if presenter.citi_presenter? %>
 <% if presenter.has_representations? %>
   <%= render_documents(presenter) %>
   <%= render_representations(presenter) %>
