Build presenters for resources linking to the asset

--- a/app/views/curation_concerns/base/_relationships.html.erb
+++ b/app/views/curation_concerns/base/_relationships.html.erb
@@ -1,9 +1,9 @@
 <h2>Relationships</h2>
 <%= render 'add_asset' if presenter.citi_presenter? %>
-<% if presenter.has_representations? %>
+<% if presenter.has_relationships? %>
   <%= render_documents(presenter) %>
   <%= render_representations(presenter) %>
-  <%= render_preferred_representation(presenter) %>
+  <%= render_preferred_representations(presenter) %>
 <% else %>
   <p>No relationships found for this <%= presenter.human_readable_type %></p>
 <% end %>
